fix: 🐛 landing page overflow

--- a/apps/dashboard/styles/globals.css
+++ b/apps/dashboard/styles/globals.css
@@ -41,7 +41,7 @@
 
     to {
       opacity: 1;
-      transform: translate(-50%, -40%) scale(2);
+      transform: translate(-50%, -28%) scale(2);
     }
   }
 
